[package]
name = "rusty-strings-control"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
enigo = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
